finition texte + js

--- a/home.html
+++ b/home.html
@@ -39,60 +39,68 @@
         <img src="./img/image-principale.jpg" class="img-fluid" alt="Responsive image">
     </div>
     <div class="card mb-3">
-        <div class="row no-gutters">
+        <div id="intro" class="row no-gutters">
             <div class="col md-6">
                 <div class="card-body">
-                    <p>cynes est une agence de communication créative située à Grasse, qui partage les convictions de
-                        Monsieur Albert Camus “Créer c’est vivre deux fois.”
-                        Créée en 2019 à Grasse, cynes accompagne les professionnels dans la création et le développement
-                        de leur image et de leur notoriété. <br>
-                        Pour cynes, concevoir une identité visuelle, c’est traduire une personnalité et un univers, puis
-                        le retranscrire graphiquement avec justesse et savoir-faire.<br>
-                        Passionnée par son métier, cynes aime les belles typographies, les belles photographies, les
-                        designs épurés, les vidéos de qualité et les stratégies bien pensées. <br>
-                        Et parce que la communication n’est pas réservée uniquement au gros budgets, cynes imagine,
-                        conçoit et propose des créations sur-mesure pour vos projets.</p>
+                    <p>CYNES est une agence de communication créative, qui partage les convictions de Monsieur Albert Camus “Créer c’est vivre deux fois".<br>Nous vous accompagnons dans la création et le développement de votre image et de votre notoriété.<br>Pour nous, concevoir une identité visuelle, c’est traduire une personnalité et un univers, puis le retranscrire graphiquement avec justesse et savoir-faire.</p>
                 </div>
             </div>
             <div class="col md-6">
-                <p class="citation">Le design est l'ambassadeur silencieux de votre marque</p>
+                <div class="card-body">
+                    <p class="citation">Le design<br> est l'ambassadeur silencieux de<br> votre marque</p>
+                </div>
             </div>
         </div>
     </div>
-    <div class="row row-cols-1 row-cols-md-4">
+    <div class="trait"></div>
+    <div id="marg" class="row row-cols-1 row-cols-md-4">
+        <div class="col mb-4">
+            <div class=" overlay-image _b0 "><a href="URL_LIEN">
+                    <img class=" image _b1 " src="./img/Identité-visuelleBD.jpg" alt="Alt text" />
+                    <div class=" normal _b3 ">
+                        <div class=" text _2 "></div>
+                    </div>
+                    <div class=" hover _b2 ">
+                        <div class=" text _2 ">Identité visuelle</div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col mb-4">
+            <div class=" overlay-image _b0 "><a href="URL_LIEN">
 
-        <div class=" overlay-image _b0 "><a href="URL_LIEN">
-                <img class=" image _b1 " src="./img/Identité-visuelleBD.jpg" alt="Alt text" />
-                <div class=" normal _b3 ">
-                    <div class=" text _2 "></div>
-                </div>
-                <div class=" hover _b2 ">
-                    <div class=" text _2 ">Identité visuelle</div>
-                </div>
-            </a></div>
-        <div class="col mb-4">
-            <div class="card h-100">
-                <img class="img-savoir-faire" src="./img/CYNES--impression-BD.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Design</h5>
-                </div>
-            </div>
+                    <img class=" image _b1 " src="./img/CYNES--impression-BD.jpg" alt="Alt text" />
+                    <div class=" normal _b3 ">
+                        <div class=" text _2 "></div>
+                    </div>
+                    <div class=" hover _b2 ">
+                        <div class=" text _2 ">Design</div>
+                    </div>
+                </a></div>
         </div>
         <div class="col mb-4">
-            <div class="card h-100">
-                <img class="img-savoir-faire" src="./img/réseaux-sociaux.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Digital</h5>
-                </div>
-            </div>
+            <div class=" overlay-image _b0 "><a href="URL_LIEN">
+
+                    <img class=" image _b1 " src="./img/réseaux-sociaux.png" alt="Alt text" />
+                    <div class=" normal _b3 ">
+                        <div class=" text _2 "></div>
+                    </div>
+                    <div class=" hover _b2 ">
+                        <div class=" text _2 ">Digital</div>
+                    </div>
+                </a></div>
         </div>
         <div class="col mb-4">
-            <div class="card h-100">
-                <img class="img-savoir-faire" src="./img/web-BD.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Web</h5>
-                </div>
-            </div>
+            <div class=" overlay-image _b0 "><a href="URL_LIEN">
+
+                    <img class=" image _b1 " src="./img/web-BD.jpg" alt="Alt text" />
+                    <div class=" normal _b3 ">
+                        <div class=" text _2 "></div>
+                    </div>
+                    <div class=" hover _b2 ">
+                        <div class=" text _2 ">Web</div>
+                    </div>
+                </a></div>
         </div>
     </div>
 
