responsive mobile/tablette

--- a/home.html
+++ b/home.html
@@ -42,45 +42,40 @@
         <div id="intro" class="row no-gutters">
             <div class="col md-6">
                 <div class="card-body">
-                    <p>CYNES est une agence de communication créative, qui partage les convictions de Monsieur Albert Camus “Créer c’est vivre deux fois".<br>Nous vous accompagnons dans la création et le développement de votre image et de votre notoriété.<br>Pour nous, concevoir une identité visuelle, c’est traduire une personnalité et un univers, puis le retranscrire graphiquement avec justesse et savoir-faire.</p>
+                    <p>CYNES est une agence de communication créative, qui partage les convictions de Monsieur Albert
+                        Camus “Créer c’est vivre deux fois".<br>Nous vous accompagnons dans la création et le
+                        développement de votre image et de votre notoriété.<br>Pour nous, concevoir une identité
+                        visuelle, c’est traduire une personnalité et un univers, puis le retranscrire graphiquement avec
+                        justesse et savoir-faire.</p>
                 </div>
             </div>
             <div class="col md-6">
                 <div class="card-body">
-                    <p class="citation">Le design<br> est l'ambassadeur silencieux de<br> votre marque</p>
+                    <p class="citation">Le design<br> est l'ambassadeur silencieux de votre marque</p>
                 </div>
             </div>
         </div>
     </div>
     <div class="trait"></div>
-    <div id="marg" class="row row-cols-1 row-cols-md-4">
-        <div class="col mb-4">
-            <div class=" overlay-image _b0 "><a href="URL_LIEN">
-                    <img class=" image _b1 " src="./img/Identité-visuelleBD.jpg" alt="Alt text" />
+    <div id="marg" class="row row row-cols-1 row-cols-md-2 row-cols-xl-4">
+        <div id="background-black" class="col mb-4">
+            <div class=" overlay-image _b0 ">
+                <a href="URL_LIEN">
+                    <div class="text">
+                        <div class=" text _2 ">Identité visuelle</div>
+                    </div>
                     <div class=" normal _b3 ">
                         <div class=" text _2 "></div>
                     </div>
                     <div class=" hover _b2 ">
-                        <div class=" text _2 ">Identité visuelle</div>
+                        <img class=" image _b1 " src="./img/Identité-visuelleBD.jpg" alt="Alt text" />
                     </div>
                 </a>
             </div>
         </div>
         <div class="col mb-4">
-            <div class=" overlay-image _b0 "><a href="URL_LIEN">
-
-                    <img class=" image _b1 " src="./img/CYNES--impression-BD.jpg" alt="Alt text" />
-                    <div class=" normal _b3 ">
-                        <div class=" text _2 "></div>
-                    </div>
-                    <div class=" hover _b2 ">
-                        <div class=" text _2 ">Design</div>
-                    </div>
-                </a></div>
-        </div>
-        <div class="col mb-4">
-            <div class=" overlay-image _b0 "><a href="URL_LIEN">
-
+            <div class=" overlay-image _b0 ">
+                <a href="URL_LIEN">
                     <img class=" image _b1 " src="./img/réseaux-sociaux.png" alt="Alt text" />
                     <div class=" normal _b3 ">
                         <div class=" text _2 "></div>
@@ -88,11 +83,27 @@
                     <div class=" hover _b2 ">
                         <div class=" text _2 ">Digital</div>
                     </div>
-                </a></div>
+                </a>
+            </div>
+        </div>
+        <div id="background-black-order" class="col mb-4">
+            <div class=" overlay-image _b0 ">
+                <a href="URL_LIEN">
+                    <div class="text">
+                        <div class=" text _2 ">Design</div>
+                    </div>
+                    <div class=" normal _b3 ">
+                        <div class=" text _2 "></div>
+                    </div>
+                    <div class=" hover _b2 ">
+                        <img class=" image _b1 " src="./img/CYNES--impression-BD.jpg" alt="Alt text" />
+                    </div>
+                </a>
+            </div>
         </div>
         <div class="col mb-4">
-            <div class=" overlay-image _b0 "><a href="URL_LIEN">
-
+            <div class=" overlay-image _b0 ">
+                <a href="URL_LIEN">
                     <img class=" image _b1 " src="./img/web-BD.jpg" alt="Alt text" />
                     <div class=" normal _b3 ">
                         <div class=" text _2 "></div>
@@ -100,7 +111,8 @@
                     <div class=" hover _b2 ">
                         <div class=" text _2 ">Web</div>
                     </div>
-                </a></div>
+                </a>
+            </div>
         </div>
     </div>
 
